# DGCI_IPOL_Demo

./: README.md
app/67/: app.py
app/67/input/: index.cfg
app/67/template/: input.html  params.html  result.html
app/68/: app.py
app/68/template/: error.html  input.html  params.html  result.html
app/70/: app.py
app/70/input/: index.cfg
app/70/template/: params.html  result.html
app/71/: app.py
app/71/template/: params.html  result.html
app/74/: app.py
app/74/input/: index.cfg
app/74/template/: params.html  result.html
app/75/: app.py
app/75/input/: index.cfg
app/75/template/: input.html  params.html  result.html
execodesource/67/gjknd_1.1/: CMakeLists.txt  README.txt
execodesource/67/gjknd_1.1/doc/: Doxyfile  GJK_nD.dox
execodesource/67/gjknd_1.1/doc/html/: Array2D_8hpp_source.html  BoundariesExtractor_8hpp_source.html  Circle_8hpp_source.html  Conic_8hpp_source.html  Dummy_8hpp_source.html  GJK__nD_8dox.html  GJK__nD_8hpp_source.html  GreedyDecomposition_8hpp_source.html  Segment_8hpp_source.html  StraightLine_8hpp_source.html  annotated.html  classDLL_1_1Circle-members.html  classDLL_1_1Circle.html  classDLL_1_1Conic-members.html  classDLL_1_1Conic.html  classDLL_1_1Dummy-members.html  classDLL_1_1Dummy.html  classDLL_1_1Segment-members.html  classDLL_1_1Segment.html  classDLL_1_1StraightLine-members.html  classDLL_1_1StraightLine.html  classGJKnD-members.html  classGJKnD.html  classSingularSystem-members.html  classSingularSystem.html  classSuspiciousLoop-members.html  classSuspiciousLoop.html  classUtils_1_1Array2D-members.html  classUtils_1_1Array2D.html  classUtils_1_1BoundariesExtractor-members.html  classUtils_1_1BoundariesExtractor.html  classes.html  (+12 more)
execodesource/67/gjknd_1.1/png++/: io_base.hpp
execodesource/67/gjknd_1.1/src/: Array2D.hpp  BoundariesExtractor.cpp  BoundariesExtractor.hpp  CMakeLists.txt  Circle.cpp  Circle.hpp  Conic.cpp  Conic.hpp  Dummy.hpp  GreedyDecomposition.hpp  Segment.hpp  StraightLine.cpp  StraightLine.hpp  dll_decomposition.cpp  dll_sequence.cpp  testBoundaries.cpp  testDecomposition.cpp  testGJKnD.cpp  testOtsu.cpp  utils.cpp  utils.hpp
execodesource/68/LUTBasedNSDistanceTransform/: BaseDistanceDT.cpp  BaseDistanceDT.h  CMakeLists.txt  CumulativeSequence.cpp  CumulativeSequence.h  CumulativeSequenceTest.cpp  D4DistanceDT.cpp  D4DistanceDT.h  D8DistanceDT.cpp  D8DistanceDT.h  Doxyfile  INSTALL.txt  ImageFeeder.cpp  ImageFilter.cpp  ImageFilter.h  ImageReader.h  ImageWriter.cpp  ImageWriter.h  LUTBasedNSDistanceTransform.cpp  LUTBasedNSDistanceTransformConfig.h.in  PBMImageReader.cpp  PBMImageReader.h  PGMImageWriter.cpp  PGMImageWriter.h  PNGImageReader.cpp  PNGImageReader.h  PNGImageWriter.cpp  PNGImageWriter.h  PeriodicNSDistanceDT.cpp  PeriodicNSDistanceDT.h  README.txt  RatioNSDistanceDT.cpp  RatioNSDistanceDT.h  RationalBeattySequence.cpp  RationalBeattySequence.h  RationalBeattySequenceTest.cpp  Table1.cpp  a.pbm  image.pbm
execodesource/68/LUTBasedNSDistanceTransform/ScriptDemoIPOL/: convert.sh
execodesource/68/LUTBasedNSDistanceTransform/cmake/: Findpng.cmake
execodesource/70/: FrechetAndConnectedCompDemo
execodesource/71/ctseg/: Makefile  README.txt  applyCT.sh  convert.sh
execodesource/71/ctseg/include/: ComponentTree.h  ComponentTree.hxx  FlatSE.hxx  Image.h  Image.hxx  ImageIO.hxx  ImageIterators.h  Types.h
execodesource/71/ctseg/src/: main.cpp
execodesource/74/FrechetAndConnectedCompDemo/: CMakeLists.txt  README  README_IPOL_DEMO_ExtractionConnectedRegions.txt  README_IPOL_DEMO_FrechetSimplification.txt
execodesource/74/FrechetAndConnectedCompDemo/cmake/: CheckDGtalDependencies.cmake  DGtalConfig.cmake.in.orig  Install.cmake.orig
execodesource/74/FrechetAndConnectedCompDemo/demoIPOL_ExtrConnectedReg/: CMakeLists.txt  convertFig.sh  displayContours.cpp  extract3D.cpp  pgm2freeman.cpp  transformBG.sh
execodesource/74/FrechetAndConnectedCompDemo/demoIPOL_ExtrConnectedReg/Images/: circularGradient.pgm  circularGradientNoise.pgm  sample3D1.vol  shapeTest.fig  shapeTest.fig.bak
execodesource/74/FrechetAndConnectedCompDemo/demoIPOL_FrechetSimplification/: CMakeLists.txt  ConfigDemoIPOL_FrechetSimplification.h.in  frechetSimplification.cpp
execodesource/74/FrechetAndConnectedCompDemo/demoIPOL_FrechetSimplification/Data/Beetles/: beetle-10.sdp  beetle-11.sdp  beetle-12.sdp  beetle-14.sdp  beetle-15.sdp  beetle-16.sdp  beetle-17.sdp  beetle-18.sdp  beetle-19.sdp  beetle-2.sdp  beetle-20.sdp  beetle-3.sdp  beetle-4.sdp  beetle-5.sdp  beetle-6.sdp  beetle-7.sdp  beetle-8.sdp  beetle-9.sdp
execodesource/74/FrechetAndConnectedCompDemo/demoIPOL_FrechetSimplification/Data/Flies/: fly-1.sdp  fly-10.sdp  fly-11.sdp  fly-12.sdp  fly-13.sdp  fly-14.sdp  fly-15.sdp  fly-16.sdp  fly-17.sdp  fly-18.sdp  fly-19.sdp  fly-2.sdp  fly-20.sdp  fly-3.sdp  fly-4.sdp  fly-5.sdp  fly-6.sdp  fly-7.sdp  fly-8.sdp  fly-9.sdp
execodesource/74/FrechetAndConnectedCompDemo/demoIPOL_FrechetSimplification/Data/Miscellaneous/: circle30.sdp  circle30noisy.sdp  ellipseBruit2.sdp  flower.sdp  hexagon.sdp  kangourou.sdp  test.sdp
execodesource/74/FrechetAndConnectedCompDemo/demoIPOL_FrechetSimplification/Data/Plants/: Plant004.sdp  Plant019.sdp  Plant033.sdp  Plant037.sdp  Plant046.sdp  Plant075.sdp  Plant077.sdp
execodesource/74/FrechetAndConnectedCompDemo/demoIPOL_FrechetSimplification/Data/Results/Plant077_error=7/: frechet.vertices  plot.txt  width.vertices
execodesource/74/FrechetAndConnectedCompDemo/demoIPOL_FrechetSimplification/Data/Results/beetle-10_error=5/: frechet.vertices  plot.txt  width.vertices
execodesource/74/FrechetAndConnectedCompDemo/doc/: Board-tagfile  DGtal-tagfile  semantic.cache
execodesource/74/FrechetAndConnectedCompDemo/illustrArtIPOL_ExtrConnectedReg/: CMakeLists.txt  ReadMe.txt  illustrationAdjacency.cpp  illustrationAdjacency3D.cpp
execodesource/74/FrechetAndConnectedCompDemo/src/: CMakeLists.txt
execodesource/75/meaningfulscaleDemo/: README_IPOL_DEMO.txt
execodesource/75/meaningfulscaleDemo/demoIPOL/: CMakeLists.txt  meaningfulScaleEstim.cxx  removeFigBG.sh  sed.sh
(+149 files in other folders)
